--- a/source/genomics.html
+++ b/source/genomics.html
@@ -44,7 +44,7 @@
         
         <td id="ballot">
           <a href="versions.html#std-process">Standards Status</a>:
-          <!--!ns!--><a href="versions.html#std-process">Trial Use</a>
+          <!--!ns!--><a href="versions.html#std-process">Normative</a>
         </td>
       </tr>
     </table>
